# typedown

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  VERSION  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.sh  publish_production.sh  publish_staging.sh  rust-analyzer.toml
crates/tdr-incremental/: Cargo.toml
crates/tdr-incremental/src/: lib.rs
crates/tdr-incremental/src/id/: derived.rs  input.rs  interned.rs  mod.rs
crates/tdr-incremental/src/ingredient/: interned.rs  mod.rs
crates/tdr-incremental/src/persist/: codec.rs  fs.rs  mod.rs
crates/tdr-incremental/src/persist/serde/: mod.rs  serialize.rs
crates/tdr-incremental/src/persist/serialized/: dep_graph.rs  interned_blobs.rs  mod.rs  query_cache.rs
crates/tdr-incremental/src/persist/stable/: hash.rs  ord.rs
crates/tdr-incremental/src/persist/unstable/: compile_time_dispatch.rs
crates/tdr-incremental/src/tests/: cache_entry_count.rs  mod.rs  roundtrip.rs
crates/tdr-incremental/src/tests/fixtures/: fibonacci.rs
crates/tdr-server/: Cargo.toml
crates/tdr-server/src/: lib.rs
crates/tdr-server/src/core/: analysis_host.rs  mod.rs  multiproject.rs
crates/tdr-server/src/core/utils/: fs.rs  mod.rs
crates/tdr-server/src/lsp/: mod.rs  server.rs
crates/tdr-server/src/lsp/service/: assets_dir.rs  definition.rs  formatting.rs  hover.rs  mod.rs  semantic_tokens.rs
crates/tdr-server/src/rpc/: contract.rs  server.rs
crates/tdr-server/tests/: harness.rs
crates/tdr-server/tests/integrations/: cache_entry_count.rs  cache_roundtrip.rs  main.rs  multiproject.rs  utils.rs
crates/typedown-db/: Cargo.toml
crates/typedown-db/src/: codec.rs  dump.rs  fixtures.rs  lib.rs  load.rs  serde.rs  utils.rs
crates/typedown-db/src/derived/: get_builtin_types.rs  get_file.rs  get_files.rs  get_type.rs  get_vault_config.rs  mod.rs  parse_file.rs  parse_schemas.rs  typecheck.rs
crates/typedown-db/src/derived/evaluate/: evaluate_node.rs  evaluate_resource.rs  evaluate_schema.rs  evaluate_type.rs  mod.rs  utils.rs
crates/typedown-db/src/derived/hir/: mod.rs
crates/typedown-db/src/derived/name_resolver/: builtin_scope.rs  file_symbol.rs  get_project_schemas.rs  members.rs  mod.rs  project_members.rs  referee.rs  references.rs  resolve.rs  schema_symbol.rs  scope.rs  symbol.rs
crates/typedown-db/src/derived/typechecker/: declared_node_type.rs  get_node_type.rs  get_symbol_type.rs  get_type.rs  infer_node_type.rs  mod.rs  resolved_node_type.rs  typecheck.rs
crates/typedown-db/src/engine/: db.rs  derived.rs  id.rs  input.rs  interned.rs  mod.rs  storage.rs  tests.rs
crates/typedown-db/src/engine/ingredient/: derived.rs  ingredient.rs  input.rs  interned.rs  inventory.rs  mod.rs  untracked.rs
crates/typedown-db/src/engine/persist/: codec.rs  dep.rs  dep_path.rs  fingerprint.rs  mod.rs  span.rs
crates/typedown-db/src/inputs/: file.rs  mod.rs  project.rs
crates/typedown-db/src/tracked/: get_file.rs  get_files.rs  parse_file.rs
crates/typedown-db/src/types/: dep_node_kind.rs  derived.rs  func_signature.rs  inputs.rs  interned.rs  mod.rs  type_member.rs
crates/typedown-db/src/types/derived/: hir.rs  mod.rs
crates/typedown-db/src/types/symbol/: mod.rs
crates/typedown-db/src/utils/: get_file.rs  mod.rs
crates/typedown-incremental/: Cargo.toml
crates/typedown-incremental/src/: cancel.rs  db.rs  derived.rs  interned.rs  lib.rs  storage.rs  tests.rs
crates/typedown-incremental/src/id/: input.rs  interned.rs
crates/typedown-incremental/src/ingredient/: derived.rs  input.rs  interned.rs  inventory.rs  mod.rs
crates/typedown-incremental/src/persist/: codec.rs  fs.rs  mod.rs  serde.rs
crates/typedown-incremental/src/persist/serde/: deserialize.rs  serialize.rs
crates/typedown-incremental/src/persist/serialized/: dep_graph.rs  interned_blobs.rs  query_cache.rs
crates/typedown-incremental/src/persist/stable/: hash.rs  mod.rs
crates/typedown-incremental/src/persist/unstable/: compile_time_dispatch.rs  mod.rs
crates/typedown-incremental/src/tests/: mod.rs  query.rs  utils.rs
crates/typedown-lang/: Cargo.toml
crates/typedown-lang/proptest-regressions/db/: codec.txt
crates/typedown-lang/src/: codec.rs  lib.rs  serde.rs  utils.rs
crates/typedown-lang/src/ast/: mod.rs
crates/typedown-lang/src/db/: codec.rs  fixtures.rs  mod.rs  serde.rs  utils.rs
crates/typedown-lang/src/derived/: get_builtin_types.rs  get_vault_config.rs  parse_file.rs  parse_schemas.rs
crates/typedown-lang/src/green/: node.rs
crates/typedown-lang/src/lex/: markdown.rs  yaml.rs
crates/typedown-lang/src/red/: mod.rs
crates/typedown-lang/src/syntax/: arb.rs  mod.rs
crates/typedown-lang/src/types/: mod.rs
crates/typedown-lsp/: Cargo.toml
crates/typedown-lsp-wasm/: Cargo.toml
crates/typedown-lsp-wasm/src/: main.rs
crates/typedown-lsp/src/: analysis.rs  analysis_host.rs  lib.rs  logger.rs  multiproject.rs  run.rs  server.rs
crates/typedown-lsp/src/multiproject/: mod.rs
crates/typedown-lsp/src/notification/: diagnostics.rs
crates/typedown-lsp/src/service/: completion.rs  definition.rs  hover.rs  mod.rs  semantic_tokens.rs
crates/typedown-lsp/src/utils/: ast.rs  mod.rs  position.rs  uri.rs
crates/typedown-lsp/tests/: cache_persistence.rs  harness.rs
crates/typedown-lsp/tests/integrations/: cache_roundtrip.rs  main.rs  multiproject.rs  utils.rs
editors/tree-sitter/: CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
editors/tree-sitter/bindings/c/: tree-sitter-typedown.pc.in
editors/tree-sitter/bindings/go/: binding.go  binding_test.go
editors/tree-sitter/bindings/node/: index.js
editors/tree-sitter/bindings/rust/: build.rs  lib.rs
editors/tree-sitter/typedown/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter.json
editors/tree-sitter/typedown-markdown/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter.json
editors/tree-sitter/typedown-yaml/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter.json
(+615 files in other folders)
