[package]
name = "tdr-incremental"
version.workspace = true
edition = "2024"
license = "AGPL"

[dependencies]
tdr-macros = { version = "0.0.0", path = "../tdr-macros" }
tdr-types = { version = "0.0.0", path = "../tdr-types" }
dashmap = "6.2.1"
inventory = "0.3.24"
rustc-stable-hash = "0.1"
memmap2 = "0.9"
tempfile = "3"
fs2 = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }

[features]
session = ["fs2", "rand"]
