[package]
name = "tdr-server"
version.workspace = true
edition = "2024"
license = "AGPL"
authors = ["Huy-DNA <huydo862003@gmail.com>"]

[[bin]]
name = "tdr-lsp"
path = "src/bin/tdr-lsp.rs"

[[bin]]
name = "tdr-rpc"
path = "src/bin/tdr-rpc.rs"

[features]
default = ["session"]
session = ["tdr-incremental/session"]

[dependencies]
anyhow = "1"
log = "0.4"
crossbeam-channel = "0.5"
tdr-incremental = { version = "0.0.0", path = "../tdr-incremental" }
tdr-lang = { version = "0.0.0", path = "../tdr-lang", features = ["export"] }
tdr-types = { version = "0.0.0", path = "../tdr-types" }
lsp-types = "0.97"
lsp-server = "0.7"
serde_json = "1"
ropey = "1.6.1"
dashmap = "6.2.1"
serde = "1"
threadpool = "1"
jsonrpsee = { version = "0.26.0", features = ["macros", "client", "server"] }
tokio = "1.53.1"
notify = "8.2.0"

[dev-dependencies]
tempfile = "3"
serde = "1"
filetime = "0.2"
