[package]
name = "typedown-db"
version = "0.1.0"
edition = "2024"

[dependencies]
typedown-types = { version = "0.1.0", path = "../typedown-types" }
typedown-syntax = { version = "0.1.0", path = "../typedown-syntax" }
typedown-macros = { version = "0.1.0", path = "../typedown-macros" }
dashmap = "6.2.1"
inventory = "0.3.24"
yaml-rust2 = "0.11.0"
bitflags = "2.13.0"
dyn-clone = "1.0.20"
regex = "1.12.4"
rustc-stable-hash = "0.1"
