[package]
name = "typedown-incremental"
version = "0.1.0"
edition = "2024"
license = "AGPL"

[dependencies]
typedown-macros = { version = "0.1.0", path = "../typedown-macros" }
typedown-types = { version = "0.1.0", path = "../typedown-types" }
dashmap = "6.2.1"
inventory = "0.3.24"
rustc-stable-hash = "0.1"
memmap2 = "0.9"
tempfile = "3"
fs2 = "0.4"
rand = "0.9"
