[package]
name = "typedown-incremental"
version.workspace = true
edition = "2024"
license = "AGPL"

[dependencies]
typedown-macros = { version = "0.1.1-test-publish.3", path = "../typedown-macros" }
typedown-types = { version = "0.1.1-test-publish.3", path = "../typedown-types" }
dashmap = "6.2.1"
inventory = "0.3.24"
rustc-stable-hash = "0.1"
memmap2 = "0.9"
tempfile = "3"
fs2 = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }

[features]
session = ["fs2", "rand"]
