[package]
name = "typedown-lsp-wasm"
version.workspace = true
edition = "2024"

[package.metadata]
build-target = "wasm32-wasip1"

[[bin]]
name = "typedown-lsp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
# session feature uses fs2 for file locking which is not available in WASI P1
typedown-lsp = { path = "../typedown-lsp", default-features = false }
