[package]
name = "typedown-lsp"
version = "0.1.0"
edition = "2024"
license = "AGPL"
authors = ["Huy-DNA <huydo862003@gmail.com>"]

[[bin]]
name = "typedown-lsp"
path = "src/bin/main.rs"

[features]
default = ["session"]
session = ["typedown-incremental/session"]

[dependencies]
anyhow = "1"
typedown-incremental = { version = "0.1.0", path = "../typedown-incremental" }
typedown-lang = { version = "0.1.0", path = "../typedown-lang" }
typedown-types = { version = "0.1.0", path = "../typedown-types" }
lsp-types = "0.97"
lsp-server = "0.7"
serde_json = "1"
ropey = "1.6.1"

[dev-dependencies]
tempfile = "3"
serde = "1"
