[package]
name = "typedown-lsp"
version.workspace = true
edition = "2024"
license = "AGPL"
authors = ["Huy-DNA <huydo862003@gmail.com>"]

[[bin]]
name = "typedown-lsp"
path = "src/bin/main.rs"

[features]
default = ["session"]
session = ["typedown-incremental/session"]

[dependencies]
anyhow = "1"
log = "0.4"
crossbeam-channel = "0.5"
typedown-incremental = { version = "0.0.0", path = "../typedown-incremental" }
typedown-lang = { version = "0.0.0", path = "../typedown-lang" }
typedown-types = { version = "0.0.0", path = "../typedown-types" }
lsp-types = "0.97"
lsp-server = "0.7"
serde_json = "1"
ropey = "1.6.1"
dashmap = "6.2.1"
serde = "1"

[dev-dependencies]
tempfile = "3"
serde = "1"
filetime = "0.2"
