[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-typedown"
description = "Tree-sitter grammar for typedown"
version = "0.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "typedown"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Huy-DNA", email = "huydo862003@gmail.com" }]
requires-python = ">=3.10"
license.text = "AGPL"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/huydo862003/typedown/tree/main/editors/tree-sitter"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
