[package]
name = "tree-sitter-typedown-markdown"
description = "Tree-sitter grammar for typedown Markdown body"
version = "0.0.0"
authors = ["Huy-DNA <huydo862003@gmail.com>"]
license = "AGPL"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "typedown"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/Huy-DNA/typedown"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
